--- a/iniciando-backend-da-aplicacao/.eslintrc.json
+++ b/iniciando-backend-da-aplicacao/.eslintrc.json
@@ -23,15 +23,17 @@
         "prettier"
     ],
     "rules": {
+      "prettier/prettier": "error",
+      "class-methods-use-this": "off",
+      "@typescript-eslint/camelcase": "off",
+      "camelcase": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
         {
           "ts": "never"
         }
-      ],
-      "prettier/prettier": "error",
-      "class-methods-use-this": "off"
+      ]
     },
     "settings": {
       "import/resolver": {
