--- a/primeiro-projeto-react/.eslintrc.json
+++ b/primeiro-projeto-react/.eslintrc.json
@@ -33,6 +33,7 @@
       "react-hooks/exhaustive-deps": "warn",
       "@typescript-eslint/camelcase": "off",
       "camelcase": "off",
+      "react/jsx-one-expression-per-line": "off",
       "@typescript-eslint/explicit-function-return-type": [
         "error",
         {
