--- a/iniciando-front-end-web/gobarber-web/.eslintrc.json
+++ b/iniciando-front-end-web/gobarber-web/.eslintrc.json
@@ -44,7 +44,8 @@
         "ts": "never",
         "tsx": "never"
       }
-    ]
+    ],
+    "import/no-extraneous-dependencies": 0
   },
   "settings": {
     "import/resolver": {
