--- a/mobile-react-native/appgobarber/package.json
+++ b/mobile-react-native/appgobarber/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.8.1",
+    "@react-navigation/stack": "^5.11.0",
+    "add": "^2.0.6",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -17,7 +21,12 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "styled-components": "^5.2.0"
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.12.0",
+    "styled-components": "^5.2.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
