--- a/mobile-react-native/appgobarber/package.json
+++ b/mobile-react-native/appgobarber/package.json
@@ -16,6 +16,7 @@
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "add": "^2.0.6",
+    "axios": "^0.21.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
