--- a/nivel-4/continuando-back-end-do-app/package.json
+++ b/nivel-4/continuando-back-end-do-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/cors": "^2.8.7",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^14.0.0",
     "cors": "^2.8.5",
     "date-fns": "^2.15.0",
     "express": "^4.17.1",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.11",
