--- a/nivel-4/continuando-back-end-do-app/package.json
+++ b/nivel-4/continuando-back-end-do-app/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.7",
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
+    "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
