--- a/nivel-4/continuando-back-end-do-app/package.json
+++ b/nivel-4/continuando-back-end-do-app/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.26.0",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.5.2",
     "mongodb": "^3.6.5",
