--- a/nivel-4/continuando-back-end-do-app/package.json
+++ b/nivel-4/continuando-back-end-do-app/package.json
@@ -38,6 +38,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
     "@types/hapi__joi": "^17.1.6",
+    "@types/ioredis": "^4.22.3",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.11",
