--- a/nivel-4/continuando-back-end-do-app/package.json
+++ b/nivel-4/continuando-back-end-do-app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.7",
+    "add": "^2.0.6",
     "aws-sdk": "^2.879.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
@@ -29,10 +30,12 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "pg": "^8.3.3",
+    "rate-limiter-flexible": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.25",
-    "uuidv4": "^6.2.3"
+    "uuidv4": "^6.2.3",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
