--- a/nivel-4/continuando-back-end-do-app/package.json
+++ b/nivel-4/continuando-back-end-do-app/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.5.0",
     "pg": "^8.3.3",
     "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.25",
@@ -47,6 +48,7 @@
     "@types/mongodb": "^3.6.11",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "6.8.0",
